--- a/app/composer.json
+++ b/app/composer.json
@@ -44,7 +44,9 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "escapestudios/symfony2-coding-standard": "^3.13",
+        "fakerphp/faker": "^1.21",
         "friendsofphp/php-cs-fixer": "^3.16",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.7",
